Prevent horizontal scroll on site

--- a/isaac-macdonald/src/App.css
+++ b/isaac-macdonald/src/App.css
@@ -45,6 +45,10 @@ body {
   background-color: #212b42;
 }
 
+body, html {
+  overflow-x: hidden;
+}
+
 .main-content {
   display: flex;
   flex-direction: column;
